[gd_scene load_steps=6 format=2]

[ext_resource path="res://Image/tekgameHead_mno.png" type="Texture" id=1]
[ext_resource path="res://Sound/SFX_bass0.ogg" type="AudioStream" id=2]
[ext_resource path="res://Image/tekgame_MusicalBass.png" type="Texture" id=3]
[ext_resource path="res://Scene/HeadCartoon/tek_abc3dz_mno.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 9.4941

[node name="Tek_abc3dz_mno" type="Area2D"]
script = ExtResource( 4 )

[node name="Sprite_mno" type="Sprite" parent="."]
position = Vector2( -0.880249, -1.7605 )
texture = ExtResource( 1 )

[node name="CollisionShape2D_mno" type="CollisionShape2D" parent="."]
position = Vector2( -0.568054, -2.6663 )
scale = Vector2( 4.81676, 4.62701 )
shape = SubResource( 1 )

[node name="HitSound_mno" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 2.0

[node name="Sprite2_mno" type="Sprite" parent="."]
position = Vector2( -0.880249, -1.7605 )
texture = ExtResource( 3 )

[connection signal="input_event" from="." to="." method="_on_Tek_abc3dz_input_event"]
[connection signal="finished" from="HitSound_mno" to="." method="_on_HitSound_mno_finished"]
